feat: page prototype, before refactor checkpoint

--- a/source/components/skill-badge.astro
+++ b/source/components/skill-badge.astro
@@ -12,7 +12,7 @@ const { skill, ...props } = Astro.props;
 
 <Badge
   {...props}
-  class="space-x-2 whitespace-nowrap px-4 py-2 font-semibold"
+  class="select-none space-x-2 whitespace-nowrap px-4 py-2 font-semibold"
 >
   <Icon
     name={getIconForSkill(skill)}
