--- a/source/layouts/footer.astro
+++ b/source/layouts/footer.astro
@@ -2,11 +2,11 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<footer class="w-full px-2 py-6">
+<footer class="w-full px-2 py-8">
   <p class="text-balance text-center text-base font-semibold md:text-lg">
     <span> Designed and implemented with </span>
     <Icon
-      class="animate-beat mx-px mb-px inline"
+      class="mx-px mb-px inline animate-beat"
       name="heart"
       aria-label="love"
     />
