--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -48,7 +48,7 @@ const optionalAttrs = {
         <Icon
           name="lucide:arrow-up-right"
           class:list={[
-            "relative bottom-[2px] right-px inline-block transition-transform duration-300",
+            "relative bottom-[2px] right-px inline-block size-[0.8em] transition-transform duration-300",
             "lg:group-hover:-translate-y-1 lg:group-hover:translate-x-1 ",
             "group-focus-visible:-translate-y-1 group-focus-visible:translate-x-1",
           ]}
