--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -1,5 +1,6 @@
 @import "./fonts.css";
 @import "./theme.css";
+@import "./scroll.css";
 
 @tailwind base;
 @tailwind components;
@@ -12,19 +13,6 @@
 
   --header-height: 64px;
   --main-height: calc(var(--screen-safe-height) - var(--header-height));
-
-  --scrollbar-color-track: transparent;
-  --scrollbar-color-thumb: theme("colors.muted.DEFAULT");
-  --scrollbar-color-thumb-active: theme("colors.muted.foreground");
-  --scrollbar-color-thumb-hover: color-mix(
-    in hsl,
-    var(--scrollbar-color-thumb),
-    var(--scrollbar-color-thumb-active) 50%
-  );
-
-  --scrollbar-width: thin;
-  --scrollbar-width-legacy: 6px;
-  --scrollbar-thumb-radius: theme("borderRadius.full");
 }
 
 *,
@@ -41,10 +29,6 @@ html {
   scrollbar-gutter: stable;
 }
 
-html.lenis body {
-  height: auto;
-}
-
 body {
   width: 100%;
 
@@ -52,71 +36,21 @@ body {
   min-height: 100dvh;
 }
 
-.lenis.lenis-smooth {
-  scroll-behavior: auto !important;
-}
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
-
-.lenis.lenis-scrolling iframe {
-  pointer-events: none;
-}
-
-strong {
+strong,
+b {
   font-weight: bold;
+}
+
+q,
+blockquote {
+  font-style: italic;
 }
 
 textarea {
   resize: none;
 }
 
-@supports selector(::-webkit-scrollbar) {
-  html::-webkit-scrollbar {
-    width: var(--scrollbar-width-legacy, 0);
-  }
-
-  html::-webkit-scrollbar-button {
-    display: none;
-  }
-
-  html::-webkit-scrollbar-track {
-    background-color: var(--scrollbar-color-track);
-  }
-
-  html::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-color-thumb);
-
-    border-block: 2px solid transparent;
-    border-radius: var(--scrollbar-thumb-radius);
-    background-clip: content-box;
-  }
-
-  html::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-color-thumb-hover);
-
-    border-block: 2px solid transparent;
-    border-radius: var(--scrollbar-thumb-radius);
-    background-clip: content-box;
-  }
-
-  html::-webkit-scrollbar-thumb:active {
-    background-color: var(--scrollbar-color-thumb-active);
-
-    border-block: 2px solid transparent;
-    border-radius: var(--scrollbar-thumb-radius);
-    background-clip: content-box;
-  }
-}
-
-@supports not selector(::-webkit-scrollbar) {
-  html {
-    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
-    scrollbar-width: var(--scrollbar-width);
-  }
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(10px);
 }
