--- a/source/components/misc/polaroid-photo.astro
+++ b/source/components/misc/polaroid-photo.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import type { HTMLAttributes } from "astro/types";
 
-import { cn } from "../utils";
+import { cn } from "@app/utils";
 
 export type Props = HTMLAttributes<"div"> & {
   caption: string;
