--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -3,209 +3,37 @@ import type { GetStaticPaths } from "astro";
 
 import Page from "@app/layouts/page.astro";
 import { getLocalizedStaticPaths } from "@app/modules/i18n/lib/locales";
-import { getTranslations } from "@modules/i18n/lib/translations";
-import Badge from "@root/source/components/base/badge.astro";
-import { socials } from "@root/source/lib/data/socials";
-import Link from "@root/source/components/base/link.astro";
-import { Icon } from "astro-icon/components";
-import { Canvas } from "@root/source/components/experience/canvas";
-import { CharacterView } from "@app/components/experience/views/character";
-import { SkillView } from "@app/components/experience/views/skill";
-import MyTime from "@root/source/modules/i18n/components/my-time.svelte";
-import SkillBadge from "@root/source/components/skill-badge.astro";
 
-import Footer from "@root/source/layouts/footer.astro";
-import Timeline from "@root/source/components/timeline/timeline.svelte";
-import { experience } from "@root/source/lib/data/experience";
-import TimelineEntry from "@root/source/components/timeline/timeline-entry.svelte";
-import ProjectCard from "@root/source/components/project-card.astro";
+import { Canvas } from "@app/components/experience/canvas";
 
-import myRoom from "@app/assets/images/my-room-project.webp";
-import theGamelab from "@app/assets/images/gamelab-project.webp";
-import tetris from "@app/assets/images/tetris-project.webp";
-import MysteryButton from "@root/source/components/mystery-button.astro";
-import PolaroidPhoto from "@root/source/components/polaroid-photo.astro";
-
-import { getIconForSkill, skills } from "@root/source/lib/data/skills";
+import Hero from "@app/sections/hero.astro";
+import Header from "@app/layouts/header.astro";
+import Work from "@app/sections/work.astro";
 
 export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
-const translations = getTranslations(Astro.locals.locale);
-const t = translations.sections.about;
 
-const { locale } = Astro.locals;
+/* const { locale } = Astro.locals;
 const formatter = new Intl.DateTimeFormat(locale, {
   month: "long",
   year: "numeric",
-});
+}); */
 ---
 
 <Fragment slot="head">
   <script src="@app/lib/client.ts"></script>
 </Fragment>
 
-<Page>
-  <header></header>
+<Page bodyClass="debug-screens">
+  <Header />
 
   <Canvas client:load />
 
-  <main
-    class="container my-16 p-12 lg:max-w-screen-xl lg:px-24 lg:py-16 xl:max-w-screen-2xl 2xl:max-w-screen-3xl"
-  >
-    <section
-      class="flex"
-      data-scroll-away
-    >
-      <div class="w-3/5">
-        <h1 class="font-header">
-          <span class="block text-xl font-semibold text-foreground/50"
-            >Hello! My name is</span
-          >
-          <span class="block text-8xl/tight font-extrabold tracking-wider"
-            >Ivan Porto</span
-          >
-          <span class="mt-4 block text-4xl/10 font-bold text-foreground/50"
-            >I'm a <span class="text-primary">software</span> developer.</span
-          >
-        </h1>
+  <main class="container mx-auto max-w-screen-xl space-y-52 p-20">
+    <Hero />
 
-        <p
-          class="mt-12 text-balance text-lg text-foreground/65"
-          set:html={t.description}
-          data-headline
-        />
+    <Work />
 
-        <ul class="mt-4 flex w-full items-center gap-x-3">
-          {
-            socials.map(({ href, i18nKey, iconKey }) => {
-              const translatedLabel = translations.socials[i18nKey] as string;
-              return (
-                <li class="rounded-lg bg-background text-accent-foreground/80 transition duration-200 hover:bg-accent hover:text-primary hover:brightness-110">
-                  <Link
-                    {href}
-                    label={`Link to ${translatedLabel} (opens in a new tab).`}
-                    withTooltip
-                    targetBlank
-                  >
-                    <Icon
-                      name={iconKey}
-                      class="box-content size-7 p-2 text-current"
-                    />
-                  </Link>
-                </li>
-              );
-            })
-          }
-        </ul>
-
-        <Badge
-          hoverGlow
-          class="mt-8 w-fit select-none gap-3 px-4 py-2 text-base"
-        >
-          <span class="relative flex h-3 w-3">
-            <span
-              class="absolute inline-flex h-full w-full animate-ping rounded-full bg-primary opacity-75"
-            ></span>
-            <span class="relative inline-flex h-3 w-3 rounded-full bg-primary"
-            ></span>
-          </span>
-          <span>Available to work</span>
-        </Badge>
-      </div>
-
-      <aside class="flex w-2/5 items-center justify-end xl:justify-center">
-        <PolaroidPhoto caption="Photo I haven't decided yet" />
-      </aside>
-    </section>
-
-    <section
-      class="mt-48"
-      data-scroll-reveal
-      data-scroll-away
-    >
-      <h2 class="my-12 text-3xl font-bold opacity-85">Where I've Worked</h2>
-
-      <div class="ml-6 flex w-full">
-        <Timeline
-          itemCount={2}
-          client:idle
-          as="ul"
-        >
-          {
-            experience.map((job, index) => {
-              const { startDate, endDate } = job;
-              const start = formatter.format(startDate);
-              const end = formatter.format(endDate);
-
-              return (
-                <TimelineEntry
-                  index={index + 1}
-                  as="li"
-                  class="ease transition-opacity duration-300"
-                >
-                  <article class="group relative flex max-w-screen-lg flex-col p-4">
-                    <div
-                      class:list={[
-                        "absolute -inset-4 -z-[1] block rounded-lg transition",
-                        "-inset-x-6 block group-hover:bg-accent/50 group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] group-hover:drop-shadow-lg",
-                      ]}
-                    />
-
-                    <header class="mb-8 space-y-3">
-                      <h3 class="font-header text-xl font-bold transition duration-200 group-hover:text-primary">
-                        <Link
-                          href={job.url}
-                          label={`${job.title} at ${job.at} (opens in a new tab)`}
-                          targetBlank
-                          withExternalLinkArrow
-                        >
-                          <span class="absolute -inset-4 block rounded-lg" />
-                          <span>
-                            {job.title}
-                            {" · "}
-                            {job.at}
-                          </span>
-                        </Link>
-                      </h3>
-
-                      <div class="text-lg font-semibold text-muted-foreground/70 transition-colors duration-200">
-                        <span>{job.location}</span>
-                        <span class="opacity-50">{" | "}</span>
-                        <span aria-label="">
-                          <time
-                            datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
-                          >
-                            {start}
-                          </time>
-                          {" - "}
-                          <time
-                            datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
-                          >
-                            {end}
-                          </time>
-                        </span>
-                      </div>
-                    </header>
-
-                    <p
-                      class="job-description max-w-[800px] whitespace-pre-line text-pretty text-base text-foreground/80 group-hover:text-accent-foreground/80"
-                      set:html={job.description}
-                    />
-
-                    <footer class="mt-10 flex gap-2">
-                      {job.skills.map((skill) => (
-                        <SkillBadge skill={skill} />
-                      ))}
-                    </footer>
-                  </article>
-                </TimelineEntry>
-              );
-            })
-          }
-        </Timeline>
-      </div>
-    </section>
-
-    <section
+    <!-- <section
       class="mt-48"
       data-scroll-reveal
       data-scroll-away
@@ -403,10 +231,10 @@ const formatter = new Intl.DateTimeFormat(locale, {
       >
         Hobbies? Games? Food?
       </article>
-    </section>
+    </section> -->
   </main>
 
-  <Footer />
+  <!--   <Footer /> -->
 </Page>
 
 <style>
@@ -440,25 +268,5 @@ const formatter = new Intl.DateTimeFormat(locale, {
     display: inline-block;
     margin-left: 0.6em;
     background-color: theme("colors.muted.DEFAULT");
-  }
-
-  /** 
-    Although data-headline is defined in this file, we need :global 
-    because it's "strong" contents are injected dynamically. 
-  */
-
-  [data-headline] {
-    /** If pretty is supported it will override "balance". */
-    text-wrap: balance;
-    text-wrap: pretty;
-  }
-
-  :global([data-headline] > strong) {
-    color: theme("colors.primary.DEFAULT");
-    opacity: 0.9;
-  }
-
-  :global(.job-description b) {
-    color: theme("colors.primary.DEFAULT");
   }
 </style>
